<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mybook.asus.sanwei.cover"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"

        android:id="@+id/cover_tex"
        tools:ignore="HardcodedText,ObsoleteLayoutParam"
        android:textColor="@android:color/background_light"
        android:text="@string/cover_text"
        android:textSize="16sp"
        android:layout_above="@+id/cover_but"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:id="@+id/cover_but"
        android:background="@drawable/shape"
        android:textColor="@color/colorPrimaryDark"

        android:text="@string/cover_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_width="160dp"
        tools:ignore="ObsoleteLayoutParam"
        android:textSize="16sp" />

    <TextView
        android:text="@string/cover_view"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:id="@+id/cover_viw"
        android:textSize="40sp"
        android:textAlignment="center"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_above="@+id/cover_tex"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cover"
        android:layout_above="@+id/cover_viw"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:id="@+id/imageView2"
        android:contentDescription="@string/img" />


</RelativeLayout>
