<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mybook.asus.sanwei.LoginActivity"
    android:id="@+id/hjj"
    android:background="@color/colorPrimary">

    <!-- Login progress -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/cover"
        android:layout_marginTop="20dp"
        android:id="@+id/login_img"
        android:layout_weight="0.73"
        android:contentDescription="@string/img" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="392dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="46dp"
                android:layout_marginBottom="20dp"
                android:radius="10dp"
                android:id="@+id/hk"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/hr">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/account"
                        android:id="@+id/login_im"
                        android:layout_weight="0.10"
                        android:contentDescription="@string/login_im" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/login_edit"
                        android:inputType="text"
                       android:background="@null"
                        android:paddingTop="10dp"
                        android:hint="@string/login_edit"
                        android:layout_weight="0.21"
                        android:textSize="12sp"
                        android:textAlignment="viewStart" />
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="46dp"
                android:radius="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round"
                android:id="@+id/nn"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/psw"
                        android:id="@+id/login_in"
                        android:contentDescription="@string/login_in"
                        android:layout_weight="0.25" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:background="@null"
                        android:paddingTop="10dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_weight="2.27"
                        android:textSize="12sp" />

                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:id="@+id/hh">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@android:style/Widget.Button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="30dp"

                    tools:ignore="RtlHardcoded" />

                <Button
                    android:layout_width="140dp"
                    style="@android:style/Widget.Button"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_marginTop="16dp"

                    android:background="@drawable/shape"
                    android:text="@string/login_reg"
                    android:textStyle="normal|bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
